[gd_scene load_steps=33 format=3 uid="uid://bfjfj1jgkqusv"]

[ext_resource type="PackedScene" uid="uid://pqeixmhde661" path="res://scenes/Ennemies/ennemy.tscn" id="1_7udev"]
[ext_resource type="Texture2D" uid="uid://dx3ooaor81xak" path="res://Sprites/SpriteSheets/GarbageBagE1Anim.png" id="2_8eqe2"]
[ext_resource type="Script" uid="uid://d16tvjjltu32a" path="res://Scripts/garbage_bag.gd" id="2_ls5oa"]
[ext_resource type="Texture2D" uid="uid://dvjqhbdwjxj63" path="res://Sprites/Buttons/EnnemyHealth Under.png" id="4_6bpvi"]
[ext_resource type="Texture2D" uid="uid://vrgsc27yfalc" path="res://Sprites/Buttons/EnnemyHealth OutLine.png" id="5_j50xl"]
[ext_resource type="Texture2D" uid="uid://dg7oowu8md442" path="res://Sprites/Buttons/EnnemyHealth Progress.png" id="6_m42p7"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ls5oa"]
atlas = ExtResource("2_8eqe2")
region = Rect2(0, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_wm6e7"]
atlas = ExtResource("2_8eqe2")
region = Rect2(0, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_w5gtj"]
atlas = ExtResource("2_8eqe2")
region = Rect2(48, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_6bpvi"]
atlas = ExtResource("2_8eqe2")
region = Rect2(96, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_j50xl"]
atlas = ExtResource("2_8eqe2")
region = Rect2(144, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_m42p7"]
atlas = ExtResource("2_8eqe2")
region = Rect2(192, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_65jao"]
atlas = ExtResource("2_8eqe2")
region = Rect2(240, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_rmb5a"]
atlas = ExtResource("2_8eqe2")
region = Rect2(288, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_8phyv"]
atlas = ExtResource("2_8eqe2")
region = Rect2(48, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_2h8pq"]
atlas = ExtResource("2_8eqe2")
region = Rect2(96, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_3i73u"]
atlas = ExtResource("2_8eqe2")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_x3g1y"]
atlas = ExtResource("2_8eqe2")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_he4l0"]
atlas = ExtResource("2_8eqe2")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_veubu"]
atlas = ExtResource("2_8eqe2")
region = Rect2(0, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_rh7yp"]
atlas = ExtResource("2_8eqe2")
region = Rect2(48, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_7vr84"]
atlas = ExtResource("2_8eqe2")
region = Rect2(96, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_vdfjd"]
atlas = ExtResource("2_8eqe2")
region = Rect2(144, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ufc8i"]
atlas = ExtResource("2_8eqe2")
region = Rect2(192, 48, 48, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_ls5oa"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ls5oa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wm6e7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w5gtj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6bpvi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j50xl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m42p7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_65jao")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rmb5a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8phyv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2h8pq")
}],
"loop": true,
"name": &"GarbageBagAttack",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3i73u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x3g1y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_he4l0")
}],
"loop": true,
"name": &"GarbageBagIdle",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_veubu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rh7yp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7vr84")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vdfjd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ufc8i")
}],
"loop": true,
"name": &"GarbageBagRun",
"speed": 13.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ls5oa"]
size = Vector2(18, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wm6e7"]
size = Vector2(286, 69)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_w5gtj"]
size = Vector2(25, 23)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6bpvi"]
size = Vector2(5, 7)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_j50xl"]
size = Vector2(7, 8)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_m42p7"]
size = Vector2(2, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_65jao"]
size = Vector2(270, 59)

[node name="GarbageBag" instance=ExtResource("1_7udev")]
script = ExtResource("2_ls5oa")
GBspeed = 5000

[node name="AnimatedSprite2D" parent="." index="0"]
position = Vector2(0, -8)
scale = Vector2(0.6, 0.6)
sprite_frames = SubResource("SpriteFrames_ls5oa")
animation = &"GarbageBagAttack"
autoplay = "GarbageBagIdle"

[node name="CollisionShape2D" parent="." index="1"]
visible = false
scale = Vector2(0.6, 0.6)
shape = SubResource("RectangleShape2D_ls5oa")
debug_color = Color(0, 0.6, 0.701961, 0.713726)

[node name="Player Detector" type="Area2D" parent="." index="2"]
visible = false
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player Detector" index="0"]
position = Vector2(0, -7.5)
shape = SubResource("RectangleShape2D_wm6e7")
debug_color = Color(0.941176, 0.278431, 0.470588, 0.117647)

[node name="Jump Detector" type="Area2D" parent="." index="3"]
visible = false
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Jump Detector" index="0"]
position = Vector2(-1, -9)
shape = SubResource("RectangleShape2D_w5gtj")
debug_color = Color(0, 0.643137, 0.329412, 0.0901961)

[node name="right" type="Area2D" parent="." index="4"]
visible = false
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="right" index="0"]
position = Vector2(2, 8)
scale = Vector2(0.6, 0.6)
shape = SubResource("RectangleShape2D_6bpvi")
debug_color = Color(0.835294, 0.388235, 0, 0.196078)

[node name="left" type="Area2D" parent="." index="5"]
visible = false
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="left" index="0"]
position = Vector2(-2, 8)
scale = Vector2(0.6, 0.6)
shape = SubResource("RectangleShape2D_6bpvi")
debug_color = Color(0.835294, 0.388235, 0, 0.196078)

[node name="Head Protection" type="Area2D" parent="." index="6"]
visible = false
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Head Protection" index="0"]
position = Vector2(0, -17)
shape = SubResource("RectangleShape2D_j50xl")
debug_color = Color(0.772549, 0.14902, 1, 0.243137)

[node name="Stop Spin" type="Area2D" parent="." index="7"]
visible = false
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Stop Spin" index="0"]
scale = Vector2(0.2, 1)
shape = SubResource("RectangleShape2D_m42p7")
debug_color = Color(0.320432, 0.492786, 1, 0.0588235)

[node name="Attack Detector" type="Area2D" parent="." index="8"]
visible = false
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Attack Detector" index="0"]
position = Vector2(0, -13.5)
shape = SubResource("RectangleShape2D_65jao")
debug_color = Color(0.623529, 0.647059, 0.25098, 0.239216)

[node name="GBAttackTimer" type="Timer" parent="." index="9"]
wait_time = 3.0
one_shot = true

[node name="L_R Attack" type="Node" parent="." index="10"]

[node name="right" type="Marker2D" parent="L_R Attack" index="0"]
position = Vector2(6, 3)

[node name="left" type="Marker2D" parent="L_R Attack" index="1"]
position = Vector2(-7, 3)

[node name="ProgressBar" type="TextureProgressBar" parent="." index="11"]
offset_left = -7.0
offset_top = -13.0
offset_right = 6.0
offset_bottom = -10.0
max_value = 35.0
value = 35.0
nine_patch_stretch = true
texture_under = ExtResource("4_6bpvi")
texture_over = ExtResource("5_j50xl")
texture_progress = ExtResource("6_m42p7")

[connection signal="body_entered" from="Player Detector" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Player Detector" to="." method="_on_area_2d_body_exited"]
[connection signal="body_entered" from="Attack Detector" to="." method="_on_attack_detector_body_entered"]
